app/less/classes/lyrics.less
.lyrics-section {
    width: 100%;
    overflow-y: scroll;
    padding: 0 5px;
}

.is-song {
    .lyric-column {
        /**
         * This fixes the issue of being unable to scroll between stanzas. But
         * set only in song, otherwise lyric column in logue will cover nav.
         */
        z-index: @lyric-column-z-index;
    }
}

.lyric-column-animatable {
    position: absolute;
    width: 100%;
    height: 100%;
    overflow-y: hidden;

    display: flex;
    justify-content: center;

    background-color: rgba(150, 150, 250, 0.4);
}

.verse-bar {
    padding: 10px 15px;
    border-radius: 10px;
    background-color: @selected-verse-colour;
    cursor: pointer;

    display: flex;
    justify-content: center;
    align-items: center;

    box-shadow: 0 3px 12px 5px @darker-box-shadow-colour;
}

// TODO: Make this styling better, of course.
.verse-bar-block {
    position: absolute;
    width: 100%;
    z-index: @selected-verse-bar-z-index;

    display: flex;
    justify-content: center;
    align-items: center;

    @verse-bar-margin: 8px;

    &.above {
        margin-top: @verse-bar-margin;

        .transition(~"top 0.2s ease, transform 0.2s ease");

        &.shown {
            top: 0;
        }

        &.hidden {
            top: -50px;
        }
    }

    &.below {
        margin-bottom: @verse-bar-margin;

        .transition(~"bottom 0.2s ease, transform 0.2s ease");

        &.shown {
            bottom: 0;
        }

        &.hidden {
            bottom: -50px;
        }

        .verse-bar {
            box-shadow: 0 0 12px 5px @darker-box-shadow-colour;
        }
    }

    &.shown {
        transform: scale(1);
    }

    &.hidden {
        transform: scale(0);
    }
}

.lyric-button-block {
    position: absolute;
    padding: @app-thin-margin;
    z-index: @lyric-column-button-z-index;

    background-color: gray;
}

.lyric-icon {
    background-color: orange;
}

.is-song {
    .lyric-column-animatable {
        animation: lyricGoToSong 0.2s;
        opacity: 1;
        transform: scale(1);
    }
}

.is-logue {
    .lyric-column-animatable {
        animation: lyricGoToLogue 0.2s;
        opacity: 0;
        transform: scale(1.5);
    }
}

.is-desktop {
    .lyric-column {
        width: @golden-cord-width;
    }

    &.laptop-width {
        .lyric-column {
            width: @uncanny-valley-width;
        }
    }
}

.is-desktop {
    .ear-button-block {
        // Needed to expand properly in Chrome.
        left: 0;
        top: 0;
    }
}

.is-mobile {

    .lyric-column {
        .transition(height 0.2s ease);
        height: @collapsed-lyric-section-height;
        width: 100%;
        bottom: 0;
    }

    .ear-button-block {
        left: 0;
        bottom: 0;
        .transition(bottom 0.2s ease);
    }

    .heightless-lyric {
        .lyric-collapsed {
            .ear-button-block {
                bottom: -@app-tablet-large-icon-diameter - @app-thin-margin * 2;
            }
        }
    }

    .expand-button-block {
        .transition(transform 0.2s ease);
    }

    .lyric-column {
        .expand-button-block {
            top: 0;
            left: 0;
            .transform(scale(1));
        }
    }

    .centre-field {
        .expand-button-block {
            bottom: 0;
            left: 50%;
            .transform2(translateX(-50%), scale(1));
        }
    }

    .lyric-collapsed {
        .lyric-column {
            .expand-button-block {
                .transform(scale(0));
            }
        }
    }

    .is-logue, .lyric-expanded, .overview-shown, .dots-shown {
        .centre-field {
            .expand-button-block {
                .transform2(translateX(-50%), scale(0));
            }
        }
    }

    .heightless-lyric.lyric-collapsed {
        .ear-button-block {
            bottom: -@app-tablet-large-icon-diameter - @app-thin-margin * 2;
        }
    }

    .lyric-expanded {
        &.is-song {
            .lyric-column {
                height: ~"calc(100% - @{menu-height})";
            }
        }
    }

    .heightless-lyric {
        .lyric-column {
            height: 0;
        }
    }

    &.mini-width {
        .heightless-lyric.lyric-collapsed {
            .ear-button-block {
                bottom: -@app-mini-large-icon-diameter - @app-thin-margin * 2;
            }
        }
    }

    &.phone-width {
        .heightless-lyric.lyric-collapsed {
            .ear-button-block {
                bottom: -@app-icon-diameter - @app-thin-margin * 2;
            }
        }

        .lyric-expanded {
            &.is-song {
                .lyric-column {
                    height: ~"calc(100% - @{menu-phone-height})";
                }
            }
        }
    }
}

